@@ -28,6 +28,7 @@ Wagtail 4.1 is designated a Long Term Support (LTS) release. Long Term Support r
  * Add clarity to the development documentation that `admonition` should not be used and titles for `note` are not supported, including clean up of some existing incorrect usage (LB (Ben Johnston))
  * Unify the styling of delete/destructive button styles across the admin interface (Paarth Agarwal)
  * Adopt new designs and unify the styling styles for `.button-secondary` buttons across the admin interface (Paarth Agarwal)
+ * Refine designs for disabled buttons throughout the admin interface (Paarth Agarwal)
 
 ### Bug fixes
 
@@ -45,6 +46,8 @@ The `button-secondary` class is no longer compatible with either the `.serious` 
 When adding custom buttons using the `ModelAdmin` `ButtonHelper` class, custom buttons will no longer include the `button-secondary` class by default in index listings.
 
 If using the hook `register_user_listing_buttons` to register buttons along with the undocumented `UserListingButton` class, the `button-secondary` class will no longer be included by default.
+
+Avoid using `disabled` as a class on `button` elements, instead use the [`disabled` attribute](https://developer.mozilla.org/en-US/docs/Web/HTML/Attributes/disabled) as support for this as a class may be removed in a future version of Wagtail and is not accessible.
 
 The following button classes have been removed, none of which were being used within the admin but may have been used by custom code or packages:
 
